deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dz3-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dz3-app
  template:
    metadata:
      labels:
        app: dz3-app
    spec:
      containers:
        - name: otus-dz2
          image: lamoed/otusdz2:1.0.0
          ports:
            - name: web
              containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
