ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dz3-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: dz3-service
                port:
                  number: 8080
            path: /
